# openpipeline

./: .env  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .lintr  .pre-commit-config.yaml  .pylintrc  BEYOND_plan.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.Rmd  README.md  README.qmd  _viash.yaml  bucket-contents.txt  log.tsv  main.nf  nextflow.config  params.yaml  ruff.toml  setup.cfg  summary_docs.md  tasks.md  test.nf  trace-20251021-31278526.txt  trace-20251021-31292577.txt  viash_modules
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
build_results/: results.tsv
check_results/: results.tsv  viash_test_log.tsv  viash_test_log.txt
docs/: data-format-cellxgene.md  data-format.md  design-log.md  design.md  design.qmd  generate-docs.sh  harmony-integration.mermaid  per-sample.mermaid  pipelines-general.mermaid  pipelines-target-p3.mermaid  pipelines-target.mermaid
resources_test_scripts/: 10x_20k_fixed.sh  10x_4plex_dtc.sh  10x_5k_anticmv.sh  10x_5k_beam.sh  10x_5k_lung_crispr.sh  annotation_test_data.sh  bdrhap_5kjrt.sh  bdrhap_vdj.sh  beyond_atlas_building_test_data.sh  beyond_atlas_test_data.sh  beyond_test_data.sh  beyond_trajectory_test_data.sh  cellranger_atac_tiny_bcl.sh  cellranger_tiny_bcl.sh  cellranger_tiny_fastq.sh  concat_test_data.sh  demuxafy_test_data.sh  hlca_reference_model.sh  pbmc_1k_protein_v3.sh  ref_gencodev41_chr1.sh  rna_velocity.sh  scgpt.sh  tiledb.sh  vireo_test_data.sh
schemas/: author.yaml  (+5 more)
src/base/openpipelinetestutils/: asserters.py  conftest.py  fixtures.py  setup.cfg  typing.py  utils.py
(+2100 files in other folders)
