[metadata]
name = openpipelinetestutils
author = Dries Schaumont
author_email = dries@data-intuitive.com
maintainer = Dries Schaumont
maintainer_email = dries@data-intuitive.com
description = Various test utilities for openpipeline.
license = MIT

[options]
python_requires = >=3.8
install_requires =
    pytest >= 6.2
    mudata~=0.3.1 
    anndata~=0.11.1
package_dir=
    openpipelinetestutils = .

[options.entry_points]
pytest11 =
    openpipelineutils = openpipelinetestutils.fixtures